refactored 4 handlers tests to harmonize their structure